force-app/main/default/objects/clofor_com_cfs__AuditItem__c/clofor_com_cfs__AuditItem__c.object-meta.xml
<CustomObject>
    <label>INV Check Item</label>
    <nameField>
        <displayFormat>PDSC-{000000}</displayFormat>
        <label>Audit Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INV Check Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>