force-app/main/default/objects/clofor_com_cfs__AuditItem__c/fields/clofor_com_cfs__AdjustmentValue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AdjustmentValue__c</fullName>
    <label>Adjustment Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>