force-app/main/default/objects/clofor_com_cfs__AuditItem__c/fields/clofor_com_cfs__AuditID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AuditID__c</fullName>
    <label>Audit ID</label>
    <referenceTo>clofor_com_cfs__Audit__c</referenceTo>
    <relationshipName>ProductScope</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>