force-app/main/default/objects/clofor_com_cfs__AuditItem__c/fields/clofor_com_cfs__LocatorID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocatorID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locator ID</label>
    <referenceTo>clofor_com_cfs__LOCATOR__c</referenceTo>
    <relationshipName>ProductScope</relationshipName>
    <type>Lookup</type>
</CustomField>