force-app/main/default/objects/clofor_com_cfs__AuditItem__c/fields/clofor_com_cfs__ProductDetail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductDetail__c</fullName>
    <formula>clofor_com_cfs__ProductID__r.clofor_com_cfs__Summary__c</formula>
    <label>Product Detail</label>
    <type>Text</type>
</CustomField>