force-app/main/default/objects/clofor_com_cfs__AuditItem__c/fields/clofor_com_cfs__ProductID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductID__c</fullName>
    <label>Product ID</label>
    <referenceTo>clofor_com_cfs__PRODUCT__c</referenceTo>
    <relationshipName>ProductScope</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>