force-app/main/default/objects/clofor_com_cfs__AuditItem__c/fields/clofor_com_cfs__QuantityVariance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QuantityVariance__c</fullName>
    <formula>clofor_com_cfs__OnHandQuantity__c -  clofor_com_cfs__CountedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>