force-app/main/default/objects/clofor_com_cfs__AuditItem__c/recordTypes/clofor_com_cfs__CargoBase.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CargoBase</fullName>
    <active>true</active>
    <description>Audit item scope is a single cargo.</description>
    <label>Cargo Base</label>
</RecordType>