force-app/main/default/objects/clofor_com_cfs__AuditItem__c/recordTypes/clofor_com_cfs__CompanyBase.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CompanyBase</fullName>
    <active>true</active>
    <description>Audit item scope is based on company. All items belonging to the company become audit scope.</description>
    <label>Company Base</label>
</RecordType>