force-app/main/default/objects/clofor_com_cfs__AuditItem__c/recordTypes/clofor_com_cfs__LocatorBase.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LocatorBase</fullName>
    <active>true</active>
    <description>Audit item scope is based on Locator. All items in the locator become audit scope.</description>
    <label>Locator Base</label>
</RecordType>