force-app/main/default/objects/clofor_com_cfs__AuditItem__c/recordTypes/clofor_com_cfs__ProductBase.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ProductBase</fullName>
    <active>true</active>
    <description>Audit item scope is based on each product.</description>
    <label>Product Base</label>
</RecordType>