force-app/main/default/objects/clofor_com_cfs__AuditItem__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__AuditID__c</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>clofor_com_cfs__ProductDetail__c</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>clofor_com_cfs__LocatorID__c</columns>
    <columns>clofor_com_cfs__ScopeCompany__c</columns>
    <columns>clofor_com_cfs__OnHandQuantity__c</columns>
    <columns>clofor_com_cfs__CountedQuantity__c</columns>
    <columns>clofor_com_cfs__QuantityVariance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>